--- a/app/src/main/res/layout/layout_image.xml
+++ b/app/src/main/res/layout/layout_image.xml
@@ -7,13 +7,13 @@
 
     <ImageView
         android:id="@+id/image_image_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
         tools:src="@drawable/ic_launcher_background" />
 
     <TextView
